[gd_scene load_steps=3 format=3 uid="uid://c05l3ridoi3lc"]

[ext_resource type="Script" path="res://scripts/for_scenes/pause_menu.gd" id="1_j5c0s"]
[ext_resource type="PackedScene" uid="uid://wuikybn3pwsx" path="res://scenes/prefabs/ui_elements/option_menu.tscn" id="2_piomc"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j5c0s")

[node name="PauseMenu" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 2

[node name="OptionsToggle" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "OPTIONS_BUTTON
"

[node name="ResumeToggle" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "RESUME_BUTTON"

[node name="QuitToggle" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "QUIT_BUTTON"

[node name="OptionMenu" parent="." instance=ExtResource("2_piomc")]
visible = false
layout_mode = 1

[connection signal="pressed" from="PauseMenu/VBoxContainer/OptionsToggle" to="." method="_on_options_toggle_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/ResumeToggle" to="." method="_on_resume_toggle_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/QuitToggle" to="." method="_on_quit_toggle_pressed"]
